--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  "Welcome to your Generative Art Processing Workshop!"
+title:  "Welcome to your VVVV Workshop!"
 ---
 
 <p>I'm glad you're here, and I hope you're too! In this workshop, you will learn 3 things. First, you will discover what nodal programming is and its specificity as opposed to more classic text based programms. Second, you'll learn specificities of VVVV, which let you quickly draw and have sweet interactions. Last, the topic of this workshop, you'll create an installation where interaction with the user is at its center. Up to you to make it artistic or more design with a message or product in mind. We hope you will enjoy your stay here!</p>
