--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title:  "Welcome to your VVVV Workshop!"
 ---
 
-<p>I'm glad you're here, and I hope you're too! In this workshop, you will learn 3 things. First, you will discover what nodal programming is and its specificity as opposed to more classic text based programms. Second, you'll learn specificities of VVVV, which let you quickly draw and have sweet interactions. Last, the topic of this workshop, you'll create an installation where interaction with the user is at its center. Up to you to make it artistic or more design with a message or product in mind. We hope you will enjoy your stay here!</p>
+<p>I'm glad you're here, and I hope you're too! In this workshop, you will learn 3 things. First, you will discover what nodal programming is and its specificity as opposed to more classic text based programs. Second, you'll learn specificities of VVVV, which let you quickly draw and have sweet interactions. Last, the topic of this workshop, you'll create an installation where interaction with the user is at its centre. Up to you to make it artistic or more design with a message or product in mind. We hope you will enjoy your stay here!</p>
 
 <p>This material is not stable yet, so it might still be a bit messy. Don't hesitate to give us some feedback on how well (bad?) we did!</p>
 
@@ -11,15 +11,15 @@ title:  "Welcome to your VVVV Workshop!"
 
 <p>Some fundamental advices for beginner programmers (you might want to come back here if you have issues):
 <ol>
-<li><b>Understand what you're doing.</b> You need to understand each part of your patch (your VVVV programm), especially in this workshop since we'll probably reuse them and make you modify them short after. If you're not 100% you understand, reread the course. Maybe try the next paragraph. Ask a fellow student, a coach, search online... Anything, but don't continue if you don't understand.</li>
-<li><b>Understand what you're doing!</b> It's fundamental to undersand the grammar of your patch, but it's as important to understand its meaning, and place in the more global structure. You're patching at a specific place, it has a specific role. Understand that role. Not only of your specific modification but also of where you are making it so that a structure of your patch emerge in your mind. Sometimes you'll be asked to replace some parts, it'll be up to you to understand what & where to replace.</li>
-<li><b>Don't copy paste.</b> We will/might share some patchs to help along the way. While copy pasting might seem as a quick way to advance the material, you will learn less. The more you will do yourself, the more you will remember. And even better, whenever there are number used, try to tweak them, modify them a bit, see what happens.</li>
-<li><b>Regularly clean your patch.</b> It's easy to get lost, even more when you're discovering something new. Cleaning your patch means getting rid (or commenting) unused part of the patch, so you don't surcharge your patch and wonder where is that specific part you're lookign for. It also means organising it, so you can infer better meaning from it.</li>
+<li><b>Understand what you're doing.</b> You need to understand each part of your patch (your VVVV program), especially in this workshop since we'll probably reuse them and make you modify them short after. If you're not 100% you understand, reread the course. Maybe try the next paragraph. Ask a fellow student, a coach, search online... Anything, but don't continue if you don't understand.</li>
+<li><b>Understand what you're doing!</b> It's fundamental to understand the grammar of your patch, but it's as important to understand its meaning, and place in the more global structure. You're patching at a specific place, it has a specific role. Understand that role. Not only of your specific modification but also of where you are making it so that a structure of your patch emerge in your mind. Sometimes you'll be asked to replace some parts, it'll be up to you to understand what & where to replace.</li>
+<li><b>Don't copy paste.</b> We will/might share some patches to help along the way. While copy pasting might seem as a quick way to advance the material, you will learn less. The more you will do yourself, the more you will remember. And even better, whenever there are number used, try to tweak them, modify them a bit, see what happens.</li>
+<li><b>Regularly clean your patch.</b> It's easy to get lost, even more when you're discovering something new. Cleaning your patch means getting rid (or commenting) unused part of the patch, so you don't surcharge your patch and wonder where is that specific part you're looking for. It also means organising it, so you can infer better meaning from it.</li>
 <li><b>Learn how to search out the answer when you're stuck.</b> You are part of a group during the workshop, you can always ask the other students, or the coaches but it's a good reflex to always try to find out by yourself why there is an issue and how to solve it (just don't spend long alone, if you're stuck, we're here to help). You can search the VVVV reference page, tutorials, forums or even post a question online yourself (knowing how to post a good question would need its own tutorial too...).</li>
 </ol>
 </p>
 
-<p>What you're going to create in the upcoming hours is heavily graphic. Don't hesitate to take screenshots, pictures, movies, GIF... Please, share them with coaches, and feel free to add them in the VVVV OTS event on meetup!</p>
+<p>What you're going to create in the upcoming hours is heavily graphic. Don't hesitate to take screen-shots, pictures, movies, GIF... Please, share them with coaches, and feel free to add them in the VVVV OTS event on meetup!</p>
 
 <p>Now that we get to know each other, let's dive into the course itself.</p>
 
